# panel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  install.sh
lynx/: Cargo.toml  audit.toml
lynx/.sqlx/: query-04033eaad30ce63f08958fabfb5604aab131889512feeef9e61d33e07051ce42.json  query-04fa60cecac1c0c581ddd58cd4092413a6f8a3306c1a9e28921d410f35c243cc.json  query-07a0f39a809ce15570868cd4f1b02346ce233a4a6468b97c016bd52f4da349cb.json  query-07bfb9d7ecdb22c8e2e0d94b66f3ec87a4499b4895a586ae8cb4f70d2d23b216.json  query-0d2e54f22a7f5179e7faa3a14dfc052aa3877a3dca544d527becfddcb610bbe1.json  query-14e00756bed3d6e262de5aa2c1130655d6dc9ba1b8c4fc33ab0158861fb424cf.json  query-16ca089285971b7cf870f6e95ac91a0785d96760b72ff6f93dad5d063f73879b.json  query-1840c87d613bff048d571a40be984385dce825047bf3dfb2c3e6022e8d05e186.json  query-189218f43aaa3e902500a8ac8fd22288348c4cdfc7ffc1cafea1a132a7a93cdb.json  query-1973560da6ea391a751f974fb0f0530e18bfff3efe81ef8cb2a5a5613259d229.json  query-1a63477354912301499a0a1dc347c2dfc67068e56496d364d0bb1a79aaeeecb0.json  query-1a9cb381b103f7b8dc0cce6fb461fecd343164473c960e788092c987d1abda41.json  query-1f076c18911c6f19f59f2b08563a7f0f397421e8a602f61ec9273e21d1ee54c5.json  query-1f5b0342ef80f28dd38c3fe69f0211f43fc7a7d208aae700a1972da82b7b6eed.json  query-204b794f714f283b07b6fe54b9005f24f8e9c352176ee693a2a5d296ecfbce29.json  query-211aa911356904f3ec992e00595cf624be631894dcb2c75755c550421e067a40.json  query-21af8cca164cad6378377f035ec42e2cac73a91cb0cb36ff4c40b6ccc85e15ae.json  query-27170bba17f0a3741d6675957c6e6d25ecec938882b5221440a0797c67eb3c36.json  query-28b24383bd086639f396e2bb59ae7620ef22bc6083c74a810ba4017c92ba7fd3.json  query-2c30e55d43c427acce4c7f21d86435b7e4fcf5b0252d8b73f0692ff1e20b99af.json  query-2d03c5c6a574aab90998a1b5635492733fcfbb71b7846eadd50bf8819b0fdfe8.json  query-2d7fdc4a481f272f3cbb28dfa84cabc82859bdfc2e1a79cdc60f3bc6d2a7ce21.json  query-331133cf9c129cf4e8c7e12b7ea78d891846595d320ca9faf858df753b995681.json  query-37d4ef396e93339202bc64ba7eefbea379b9978eedd006403e090600d3f4680f.json  query-38331e94fd07618f293c2174459445b5edaa81cf2a527abcbd8650360c261927.json  query-3a9e69b7c9cae72e08c7fb8094b086789094599f575a6d27b2ad7e15cb71eac6.json  query-3c8140984103bed6d663024e9c846250ed9077ff59f33e4c285c21ffb5d3c031.json  query-3cd7469d8dd28de161b63eebba41c039d9f3eaf3267879544f8f6fb615a0fafa.json  query-3e6e8301c56e857fab3918b31b9e73133f690d14743015bffeaf4c26c63fbb94.json  query-412b66ba62bd41ff74d08cc5075673d717f0fe9f7d40f8cdeef4956dc0a63318.json  query-4bf02ac6e05fb3a91e639d0b20c0f0c3c6b30e5c936e285d2b8c2ead4ec2a466.json  query-4f572f12c9c07f76b598f346b3c926eb6e1a2cdc4f9d59b7211f54041ccafe7d.json  query-4fb5bb08cece498a68856a0e3009289b985ee3016743934dfeb3e17afe243d17.json  query-50f8e32fc7290f7c69685700e89ea70d58725b3761a08ce1e26e5a5afca6549d.json  query-51a3a01f8f9c0c434a453f50b7d0a2bb779105f0f76ce41e7284b714f37d6eae.json  query-53a2a9841fa11f694257194949b4ab849dacc55f62e7a64a0de22d97674d1fe4.json  query-563588298c7a6d7d8c6ba0f81b2ca1757d55a7cc67577fd147527e9a0b036bb0.json  query-573429710cfa33d134397c63dacbf3ab2fdb42cd3b5ad94337c294f61e520414.json  query-576a99e6b7c305f1396f0944664795d79be3e4d6e4606adf44e17a4d4144e3a4.json  query-59d886170505494a62c65c7b089fc6c8b0af5d39ef14acf7e219e2b9773c0447.json  (+69 more)
lynx/agent/: Cargo.toml  setup-agent.sh
lynx/agent/migrations/: 005_nftables_output.sql
lynx/agent/src/: cert.rs  config.rs  error.rs  handlers.rs  main.rs  nginx.rs  state.rs  ws_client.rs
lynx/agent/src/audit/: mod.rs
lynx/agent/src/auth/: mod.rs
lynx/agent/src/handlers/: containers.rs  metrics.rs  mod.rs  nftables.rs  nginx_cmd.rs  system.rs  wireguard.rs
lynx/agent/src/metrics/: mod.rs
lynx/agent/src/nftables/: divergence.rs  mod.rs
lynx/agent/src/podman/: mod.rs
lynx/agent/src/sync/: mod.rs
lynx/agent/src/update/: fallback.rs  mod.rs
lynx/compose/: Cargo.toml  GAP_ANALYSIS.md
lynx/compose/internal/: env_file.rs  error.rs  main.rs  substitute.rs
lynx/compose/internal/compose/: extends.rs  mod.rs
lynx/compose/internal/engine/: build.rs  container.rs  health.rs  mod.rs  network.rs  profiles.rs  volume.rs  watch.rs
lynx/compose/src/: env_file.rs  error.rs  lib.rs  main.rs  ports.rs  size.rs  substitute.rs
lynx/compose/src/compose/: mod.rs  tests.rs  types.rs
lynx/compose/src/engine/: mod.rs
lynx/compose/src/podman/: mod.rs
lynx/compose/tests/: env_file.rs  parse.rs  ports.rs  size.rs  substitute.rs
lynx/compose/tests/env_file/: loading.rs
lynx/compose/tests/parse/: anchors.rs  basic.rs  coverage.rs  extends.rs  fields.rs  order.rs
lynx/compose/tests/ports/: formats.rs
lynx/compose/tests/substitute/: modifiers.rs
lynx/dashboard/: .env.example  docker-compose.dev.yml  docker-compose.yml  setup-dashboard.sh  update-dashboard.sh
lynx/dashboard/nginx/: default.conf  updating.html
lynx/dashboard/secrets/: .gitignore
lynx/dashboard/server/: .gitignore  Cargo.toml  Dockerfile
lynx/dashboard/server/.sqlx/: query-01bfbb58c095c306159c29c82daf5a72a9c1cf292d72b84f4a78bd1c18839b79.json  query-039956bbaa6983ec2bc328db9bc1c0c9b088c6e612d88bae53f9e1466b8b48f3.json  query-08f6a8ec1a4ea4c7b6aff4ace55dfab6e61bea49c68ba53421aea830f200501a.json  query-0a4958af84136fc593608ad31133710798be24c5da05258ee80256f32a6b1580.json  query-0d2ef2af6dd300873ac4c3ef7c79c4a3bb1758839f0ca921a87a99c97e800dea.json  query-0d42b40bf313890d096a7ba1cd15e022a898ba6d9f1cd8a5ec64e43aa8c600f8.json  query-0fc0009754fec1a23f7a214600967bc2e193c34494cc6e237cc1ee2e906ffe6d.json  query-0fee234dcce576dd655d709f0021c759b5bcc2ed4e53820846c6435d5721e118.json  query-10eeee14e3f8d26f2a71272e8de60ecd89a96d564b5e1641ee585399bd4af3ff.json  query-16b1751531b91212dc8da38f0a15cbb42d1be323ded00652547f942986479e33.json  (+75 more)
lynx/dashboard/ui/: .fuse_hidden000059b000000955  .fuse_hidden00005d9600000954  .fuse_hidden00040bd80000096b  .fuse_hidden0004217900000943  biome.json  components.json  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
lynx/translators/compose/: Cargo.toml  GAP_ANALYSIS.md
(+448 files in other folders)
