[workspace]
members = [
    "agent",
    "translators/compose",
    "dashboard/server",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros", "ws"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header", "limit"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "ipnetwork"] }

# cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# auth
argon2 = "0.5"
josekit = "0.10"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }

# crypto primitives
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
base64ct = { version = "1", features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
x509-parser = "0.16"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"

# types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# WebSocket (agent client)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
