[package]
name = "lynx-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lynx-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lynx-compose = { path = "../translators/compose" }
