[package]
name = "lynx-compose"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lynx-compose"
path = "internal/main.rs"

[lib]
name = "lynx_compose"
path = "internal/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = "0.9"
bollard = "0.17"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
futures = "0.3"
libc = "0.2"
tar = "0.4"
flate2 = "1.0"
bytes = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
